@@ -2,7 +2,8 @@
 v3.0.0alpha6
 ------------
 
-
+[rla] Upgraded to conform PSR-11 2.0.1 interfaces
+|+
 
 
 ------------
